--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,111 @@
 body {
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
+    margin: 0;
+    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
 
 }
 
-.container {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 5;
+h2 {
+    padding-top:2rem;
+}
+
+h2.headingbio {
+    text-align: center;
+
+}
+
+.signature {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+p {
+    letter-height: 1.5;
+}
+
+ul {
+    list-style-type: none;
 }
 
 .profile {
     border-radius: 20px 0px 20px 0px;
 }
+
+.footer {
+    background-color: #73C2FB;
+    color: white;
+    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+
+}
+
+.table {
+    font-size: 5px;
+}
+
+
+.header {
+    background-color: #73C2FB;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+a.navlinks {
+    color: white;
+    text-decoration: none;
+    align-self: flex-start;
+    list-style-type: none;
+}
+
+ul.navbar {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    text-align: left;
+    padding: 200px, 0px;
+}
+
+.header2 {
+    text-align: center;
+}
+
+.biography {
+    background-color: darkgrey;
+    color: white;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.myself {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    text-align: justify;
+}
+
+.information {
+    background-color: white;
+    color: black;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+
+p.aboutp {
+    text-align: justify;
+    margin-top: 0;
+    margin-bottom: 0;
+
+}
+
+h2.ueberschrift {
+    font-size: 0,5rem;
+}
+
